# file-transfer

./: CMakeLists.txt  README.md  client_handler.c  client_handler.h  common.h  env_config.h  file_hash.c  file_hash.h  file_manager.c  file_manager.h  file_ops.h  file_transfer_client.c  file_transfer_helpers.c  file_transfer_helpers.h  file_transfer_server.c  file_transfer_server.h  main_server.c  simple_base64.c  simple_base64.h  utils.c  utils.h
tests/: ss  test_base64.c  test_splitString.c
